<?xml version="1.0"?>
<package format="2">
  <name>argus_kobuki</name>
  <version>0.0.0</version>
  <description>The argus_kobuki package</description>
  <author>M. Kaan Tasbas </author>
  <maintainer email="mktasbas@gmail.com">M. Kaan Tasbas</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/eyes-of-argus/argus_kobuki</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kobuki_keyop</build_depend>
  <build_depend>kobuki_node</build_depend>

  <build_export_depend>kobuki_keyop</build_export_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  
  <exec_depend>kobuki_keyop</exec_depend>
  <exec_depend>kobuki_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
